# DynamoRIO-for-ARM

./: july2011ProgressReport.tex  september2011ProgressReport.tex
Clients/: example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c
Current Version/cleanDynamo/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  configure.h  configure_defines.h  configure_temp.h  delete
Current Version/cleanDynamo/cmake/: DynamoRIOConfig.cmake  DynamoRIOTarget32.cmake
Current Version/cleanDynamo/core/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  config.c  moduledb.c  perscache.c  vmareas.c
Current Version/cleanDynamo/ext/: Makefile  (+1 more)
CurrentVersion/cleanDynamo/: CMakeLists.txt  CMakeLists.txt~  CPackConfig.cmake  CPackSourceConfig.cmake  DRTest  Makefile  cmake_install.cmake  configure_defines.h  configure_temp.h
Decoder/dynoCoder/: Example  decodeHeader.h  main.c
Encoder/: Example  Makefile  decode_table.c  encode.c  encodeHeader.h
Misc Code/Assembly/: 1.asm  1s  hello.asm
MiscCode/cMakeExamples/3/: CMakeLists.txt  Makefile  Tutorial  TutorialConfig.h  tutorial.c
MiscCode/cMakeExamples/3/alternative/: CMakeLists.txt  cmake_install.cmake
Running Version/cleanDynamo/: .cproject  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  configure.h  configure_temp.h
RunningVersion/cleanDynamo/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  svn-commit.5.tmp
(+355 files in other folders)
